--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
 <head>
+<title>Nigel Hartman</title>
+<style>
+#header {
+  align: center;
+}
+#box1 {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+</style>
 </head>
 <body>
 <div id="box1">
-<h1>Welcome to my page</h1>
+<h1 id="header">Welcome to my page</h1>
 <h2>About me</h2>
 <p>Name: Nigel Hartman</p>
 <p>BSc. Applied computer science (Done.)</p>
