--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Nigel Hartman</title>
 <style>
 #header {
-  align: center;
+  text-align: center;
 }
 #box1 {
   margin-left: 10%;
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="box1">
-<h1 id="header">Welcome to my page</h1>
+<h1 id="header">Welcome to my page!</h1>
 <h2>About me</h2>
 <p>Name: Nigel Hartman</p>
 <p>BSc. Applied computer science (Done.)</p>
