--- a/index.html
+++ b/index.html
@@ -27,4 +27,114 @@
 <a href="https://www.linkedin.com/in/nigel-hartman-a24437179">https://www.linkedin.com/in/nigel-hartman-a24437179</a><br>
 </div>
 </body>
+<script>
+// cat rain taken from https://codepen.io/jagjeetkhalsa/pen/vjNZYV
+//
+// Random integer function taken from:
+// https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random
+function getRandomIntInclusive(min, max) {
+  min = Math.ceil(min);
+  max = Math.floor(max);
+  return Math.floor(Math.random() * (max - min + 1)) + min; //The maximum is inclusive and the minimum is inclusive 
+}
+
+const ElementPosition = function ElementPosition(element, x, y, dWidth, dHeight, yVelocity) {
+  this.element = element;
+  this.x = x;
+  this.y = y;
+  this.dWidth = dWidth;
+  this.dHeight = dHeight;
+  this.yVelocity = yVelocity;
+}; 
+
+ElementPosition.prototype.updateY = function updateY() {
+  this.y = this.y + this.yVelocity;
+};
+
+const EmojiCatRain = function EmojiCatRain()  {
+  this.canvas = document.createElement('canvas');
+  let h = window.innerHeight;
+  let w = window.innerWidth;
+  this.canvas.height = h;
+  this.canvas.width = w;
+
+  let catElemBuf = [];
+
+  let catEmojis = ['😸', '😹', '😺', '😻', '😼', '😽', '🙀', '😿', '😾'];
+
+  let ctx = this.canvas.getContext('2d');
+
+  ctx.fillStyle = 'black';
+  ctx.fillRect(0, 0, w - 1, h - 1);
+
+  document.body.insertBefore(this.canvas, document.body.nextSibling);
+
+  this.resetButton = document.createElement("button");
+  this.resetButton.innerHTML = "Reset Canvas";
+  // attach event listener to the button 
+  this.resetButton.addEventListener('click', function resetButtonClickEventListener(e) {
+    if (e.target && e.target.nodeName === 'BUTTON') {
+      console.log("Reset Clicked");
+      ctx.fillStyle = 'black';
+      ctx.fillRect(0, 0, w - 1, h - 1);
+      catElemBuf = [];
+    }
+  });
+
+  document.body.insertBefore(this.resetButton, document.body.nextSibling);
+
+  window.requestAnimationFrame(function draw() { 
+
+    let numNewEmojis = [0, 0, 0, 0, 0, 0, 0, 0, 1, 1 ];
+    let newEmojisIndex = getRandomIntInclusive(0, 10);
+
+    for (let i= 0; i < numNewEmojis[newEmojisIndex]; i++) {
+      let x = getRandomIntInclusive(0, w - 1);
+      let y = -42;
+      let size = getRandomIntInclusive(16, 42);
+      let dWidth = size; 
+      let dHeight = size;
+      let yVelocity = getRandomIntInclusive(1, 5);
+      let catElem = catEmojis[getRandomIntInclusive(0, catEmojis.length - 1)];
+      let elementPosition = new ElementPosition(catElem, x, y, dWidth, dHeight, yVelocity);
+      catElemBuf.push(elementPosition); 
+    }
+
+    catElemBuf.forEach(element => {
+      element.updateY();
+    });
+
+    catElemBuf = catElemBuf.filter(elem => {
+      if (elem.y > h - 1 + 42) {
+        return false;
+      }
+       return true;
+    });
+
+    ctx.fillStyle = 'black';
+    ctx.fillRect(0, 0, w - 1, h - 1);
+
+    catElemBuf.forEach(elem => {
+      ctx.font = elem.dWidth + 'px serif';
+      ctx.fillText(elem.element, elem.x, elem.y);
+    });
+
+    window.requestAnimationFrame(draw);
+});
+} // EmojiCatRain
+
+
+// Allow inclusion in browers and node
+if (typeof module !== 'undefined' && typeof module.exports !== 'undefined') {
+  module.exports = {
+    RandomColorAnimation,
+  };
+} else {
+  window.EmojiCatRain = EmojiCatRain;
+
+  window.onload = function onload() {
+    window.ecr = new EmojiCatRain();
+  };
+} //else
+</script>
 </html>
