--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
 <a href="https://www.kaggle.com/nigelhartm">https://www.kaggle.com/nigelhartm</a><br>
 <a href="https://huggingface.co/nigelhartm">https://huggingface.co/nigelhartm</a><br>
 <a href="https://www.linkedin.com/in/nigel-hartman-a24437179">https://www.linkedin.com/in/nigel-hartman-a24437179</a><br>
+Events
+<table>
+<tr>
+<td>Year</td>
+<td>Title</td>
+<td>Location</td>
+<td>Role</td>
+</tr>
+<tr>
+<td>2018</td>
+<td>Code + Design Camp</td>
+<td>Bonn</td>
+<td>Coach</td>
+</tr>
+<tr>
+<td>2018</td>
+<td>YaM - Hackathon</td>
+<td>Bonn</td>
+<td>Participant</td>
+</tr>
+<tr>
+<td>2018</td>
+<td>Mobility Hackathon</td>
+<td>Hamburg</td>
+<td>Participant</td>
+</tr>
+<tr>
+<td>2023</td>
+<td>German Conference on Bioinformatics</td>
+<td>Hamburg</td>
+<td>Participant</td>
+</tr>
+</table>
 </div>
 </body>
 </html>
