--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 </head>
 <body>
 <div id="box1">
+  
 <h1 id="header">Welcome to my page!</h1>
-<h2>About me</h2>
+  
+<h2>Personal info</h2>
 <p>Name: Nigel Hartman</p>
 <p>BSc. Applied computer science</p>
 <p>MSc. Bioinformatics</p>
+
+<h2>About me</h2>
 <p>As a software engineer with a background in telecommunications, I bring a unique perspective and a set of skills to the field of bioinformatics. My proficiency in programming and machine learning along with my experience in building robust and scalable systems, allows me to approach problem-solving in bioinformatics from a different angle. I am currently furthering my education by studying for a Master's degree in Bioinformatics at the University of Potsdam. My goal is to use my skills and knowledge to drive innovation and make a positive impact in healthcare and biotechnology.</p>
-<h2>Linktree</h2>
-<a href="https://nigelhartm.github.io">https://nigelhartm.github.io</a><br>
-<a href="https://github.com/nigelhartm">https://github.com/nigelhartm</a><br>
-<a href="https://www.kaggle.com/nigelhartm">https://www.kaggle.com/nigelhartm</a><br>
-<a href="https://huggingface.co/nigelhartm">https://huggingface.co/nigelhartm</a><br>
-<a href="https://www.linkedin.com/in/nigel-hartman-a24437179">https://www.linkedin.com/in/nigel-hartman-a24437179</a><br>
-Events
+
+
+<h2>Events</h2>
 <table>
 <tr>
 <td>Year</td>
@@ -58,6 +58,14 @@ Events
 <td>Participant</td>
 </tr>
 </table>
+
+<h2>Linktree</h2>
+<a href="https://nigelhartm.github.io">https://nigelhartm.github.io</a><br>
+<a href="https://github.com/nigelhartm">https://github.com/nigelhartm</a><br>
+<a href="https://www.kaggle.com/nigelhartm">https://www.kaggle.com/nigelhartm</a><br>
+<a href="https://huggingface.co/nigelhartm">https://huggingface.co/nigelhartm</a><br>
+<a href="https://www.linkedin.com/in/nigel-hartman-a24437179">https://www.linkedin.com/in/nigel-hartman-a24437179</a><br>
+  
 </div>
 </body>
 </html>
