--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 <h2>Events</h2>
 <table>
 <tr>
-<td>Year</td>
-<td>Title</td>
-<td>Location</td>
-<td>Role</td>
+<td><i>Year</i></td>
+<td><i>Title</i></td>
+<td><i>Location</i></td>
+<td><i>Role</i></td>
 </tr>
 <tr>
 <td>2018</td>
@@ -58,6 +58,9 @@
 <td>Participant</td>
 </tr>
 </table>
+
+<h2>Contact</h2>
+<p>If you want to contact me, feel free to send me a request on <a href="https://www.linkedin.com/in/nigel-hartman-a24437179">LinkedIn</a>.</p>
 
 <h2>Linktree</h2>
 <a href="https://nigelhartm.github.io">https://nigelhartm.github.io</a><br>
