--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>MSc. Bioinformatics</p>
 
 <h2>About me</h2>
-<p>As a software engineer with a background in telecommunications, I bring a unique perspective and a set of skills to the field of bioinformatics. My proficiency in programming and machine learning along with my experience in building robust and scalable systems, allows me to approach problem-solving in bioinformatics from a different angle. I am currently furthering my education by studying for a Master's degree in Bioinformatics at the University of Potsdam. My goal is to use my skills and knowledge to drive innovation and make a positive impact in healthcare and biotechnology.</p>
+<p>I'm a software engineer with a strong background in telecommunications, passionate about the dynamic interplay of technology and science. While my expertise lies in telecommunications, I'm also intrigued by the captivating world of science and its potential to transform various industries. However, what truly excites me is the profound influence of machine learning on our rapidly evolving world. I'm continually exploring how machine learning is reshaping industries and driving innovation. Currently, I'm pursuing a Master's degree in Bioinformatics at the University of Potsdam, where I'm melding my telecom background with cutting-edge bioinformatics techniques. My ultimate goal is to leverage my diverse skill set to provide positive change and innovation across a broad spectrum of fields.</p>
 
 
 <h2>Events</h2>
